# doc/API仕様書/BFF/openapi.yaml
@@ -89,6 +89,34 @@ paths:
           $ref: "#/components/responses/BadRequest"
 
   /todos/{id}:
+    put:
+      tags: [todo]
+      summary: Todo更新
+      description: 指定したidのTodoをtitle・dueDate・assignee・statusで全体更新する。
+      operationId: updateTodo
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "../common/schemas/Todo.yaml#/TodoInput"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "../common/schemas/Todo.yaml#/Todo"
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "404":
+          $ref: "#/components/responses/NotFound"
     delete:
       tags: [todo]
       summary: Todo削除
@@ -108,6 +136,12 @@ components:
   responses:
     BadRequest:
       description: 400 Bad Request
+      content:
+        application/json:
+          schema:
+            $ref: "../common/schemas/Error.yaml#/Error"
+    NotFound:
+      description: 404 Not Found
       content:
         application/json:
           schema:
